# vcs

./: Cargo.toml  README.md
src/: errors.rs  main.rs  parser.rs  report_printer.rs  vcs_manager.rs
src/commands/: commit.rs  init.rs  jump.rs  log.rs  merge.rs  mod.rs  new_branch.rs  status.rs
src/vcs_manager/: file_manager.rs  objects.rs  objects_manager.rs  public_info.rs  traits.rs
test_vcs/.vcs/: STATE  index
test_vcs/.vcs/refs/: heads
tests/: common.rs  test_commit.rs  test_init.rs  test_jump.rs  test_log.rs  test_merge.rs  test_new_branch.rs  test_status.rs
