[package]
name = "vcs"
version = "0.1.0"
edition = "2021"
description = "Simple command-line tool for local version control"

[dependencies]
anyhow = "1.0"
array_tool = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.*", features = ["derive"] }
# flate2 = "1.0"
hex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["std"] }
sha1 = "0.10.5"
thiserror = "1.0"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "2.1"
regex = "1"
